# XKmodern-Lite

./: README.md  main.py  pyproject.toml  requirements.txt
static/: style.css
templates/: buttons.html  error.html  footer.html  header.html  reader.html
