[tool.poetry]
name = "XKmodern-Lite"
version = "2.1.1"
description = "Read XKCD in a web app"
authors = ["Absucc"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
urllib3 = "^1.26.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
